<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="24dp"
    android:paddingEnd="24dp">

    <!-- Username Label -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/usernameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/emailInputLayout"
        app:layout_constraintVertical_chainStyle="packed">

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_signup_username"
            android:inputType="text"
            android:importantForAutofill="no"/>
    </android.support.design.widget.TextInputLayout>

    <!-- Email Label -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/usernameInputLayout"
        app:layout_constraintBottom_toTopOf="@id/passwordOneInputLayout">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_login_email"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"/>
    </android.support.design.widget.TextInputLayout>

    <!-- Password1 Label -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordOneInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
        app:layout_constraintBottom_toTopOf="@id/passwordTwoInputLayout">

        <EditText
            android:id="@+id/passwordOneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_signup_password1"
            android:inputType="textPassword"
            android:importantForAutofill="no"/>
    </android.support.design.widget.TextInputLayout>

    <!-- Password2 Label -->
    <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordTwoInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/passwordOneInputLayout"
            app:layout_constraintBottom_toTopOf="@id/createAccountButton">

        <EditText
                android:id="@+id/passwordTwoEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_signup_password2"
                android:inputType="textPassword"
                android:importantForAutofill="no"/>
    </android.support.design.widget.TextInputLayout>

    <!-- Signup Button -->
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/createAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/passwordTwoInputLayout"
        app:layout_constraintBottom_toTopOf="@id/loginLinkTextview"
        android:text="@string/fragment_signup_create_account"/>

    <TextView
        android:id="@+id/loginLinkTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/createAccountButton"
        app:layout_constraintBottom_toTopOf="@id/progressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/fragment_signup_login_link"/>

    <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/loginLinkTextview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"/>

</android.support.constraint.ConstraintLayout>